# tree-sitter-cpp-ue5

./: .gitignore  Cargo.toml  Package.swift  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/TreeSitterUE5/: cpp.h
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  rainbow-delimiters.scm  tags.scm
src/: grammar.json  node-types.json  scanner.c
